Update files styling and fixed links

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-        <a href="https://your-portfolio-url.com" target="_blank">Developer Portfolio</a>
+        <a href="https://github.com/CatMamaGB" target="_blank">Developer Portfolio</a>
     </footer>
 
     <script src="./assets/js/logic.js"></script>
