--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <header>
+        <nav class="main-nav">
+            <a href="index.html" class="nav-logo">My Blog</a>
+            <div class="nav-links">
+                <a href="blog.html">View Posts</a>
+                <a href="https://github.com/CatMamaGB" target="_blank" class="portfolio-link">Developer Portfolio</a>
+                <button id="themeToggle">Toggle Dark Mode</button>
+            </div>
+        </nav>
         <h1>Create a Blog Post</h1>
     </header>
 
@@ -34,7 +42,7 @@
     </main>
 
     <footer>
-        <a href="https://your-portfolio-url.com" target="_blank">Developer Portfolio</a>
+        <a href="https://github.com/CatMamaGB" target="_blank">Developer Portfolio</a>
     </footer>
 
     <script src="./assets/js/logic.js"></script>
